--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "proxy": "http://localhost:5000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
