--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "is-empty": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "material-ui-core": "^5.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
