--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "history": "^5.0.0",
     "is-empty": "^1.2.0",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "material-ui-core": "^5.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redirect": "^0.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
